--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
   },
   "private": true,
   "devDependencies": {
-    "eslint": "^2.8.0"
+    "babel-eslint": "^10.0.1",
+    "eslint-config-babel": "^9.0.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-plugin-mocha": "^5.3.0"
   }
 }
